# Virtual-Memory-Manager

./: .gitignore  .service_pids  ANALYSIS_AND_ACTION_PLAN.md  DEMO_FOR_TEACHER.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  Dockerfile  Dockerfile.predictor  ENV_ANALYSIS.md  INTEGRATION_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  README.md  RENDER_DEPLOYMENT.md  TRAINING_GUIDE_WINDOWS.md  connectivity_test_results.json  demo_script.py  deploy-render.sh  deploy.bat  deploy.sh  docker-compose.prod.yml  docker-compose.yml  env.example  evaluate.py  generate_traces.py  quick_fix_ai_integration.py  quick_start.md  railway.json  render.yaml  requirements.txt  run_predictor.py  setup_training.py  simple_predictor.py  simulate_workload.py  start_all_services.bat  start_all_services.sh  start_services.bat  start_services.sh  stop_all_services.sh  test_connectivity.py  (+4 more)
backend/: CMakeLists.txt  Dockerfile  PROJECT_SUMMARY.md  README.md  build.bat  build.sh  test_api.py
backend/include/api/: Server.h
backend/include/vmm/: PageTable.h  Replacement.h  VMM.h
backend/include/workload/: WorkloadGen.h
backend/src/: main.cpp
backend/src/api/: Server.cpp
backend/src/vmm/: PageTable.cpp  Replacement.cpp  VMM.cpp
backend/src/workload/: WorkloadGen.cpp
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ControlPanel.tsx  LogPanel.tsx  MetricsChart.tsx  PredictionTable.tsx
frontend/src/hooks/: useEventStream.ts  (+2 more)
nginx/: nginx.conf
predictor/: __init__.py  models.py  service.py  workload_specific_predictor.py
(+1 files in other folders)
